--- a/src/SyncMe/SyncMe.Lib/Views/CalendarPage.xaml
+++ b/src/SyncMe/SyncMe.Lib/Views/CalendarPage.xaml
@@ -2,7 +2,8 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="SyncMe.Views.CalendarPage"
-             xmlns:controls="clr-namespace:Xamarin.Plugin.Calendar.Controls;assembly=Xamarin.Plugin.Calendar" 
+             xmlns:controls="clr-namespace:Xamarin.Plugin.Calendar.Controls;assembly=Xamarin.Plugin.Calendar"
+             xmlns:markup="clr-namespace:SyncMe.Lib.MarkupExtensions"
              Title="Calendar">
     <ContentPage.Resources>
         <ResourceDictionary>
@@ -73,7 +74,7 @@
     </ContentPage.Resources>
 
     <ContentPage.ToolbarItems>
-        <ToolbarItem IconImageSource="icon_about.png" Clicked="OnSettingsClicked" />
+        <ToolbarItem IconImageSource="{markup:ImageExtension SharedSource=icon_about.png}" Clicked="OnSettingsClicked" />
     </ContentPage.ToolbarItems>
 
     <ContentPage.Content>
