#removed useless code

--- a/src/SyncMe/SyncMe.Lib/Views/CalendarPage.xaml
+++ b/src/SyncMe/SyncMe.Lib/Views/CalendarPage.xaml
@@ -65,12 +65,11 @@
                         <ColumnDefinition Width="5*"/>
                     </Grid.ColumnDefinitions>
                     <Grid.RowDefinitions>
-                        <RowDefinition Height="2*"/>
                         <RowDefinition Height="*"/>
                         <RowDefinition Height="20*"/>
                     </Grid.RowDefinitions>
 
-                    <Label Grid.Row="1" FontSize="Medium" Style="{StaticResource YearMonthStyle}" Grid.Column="0" Grid.ColumnSpan="2" x:Name="year"  HorizontalOptions="Center" IsVisible="{Binding CalendarSectionShown}">
+                    <Label Grid.Row="0" FontSize="Medium" Style="{StaticResource YearMonthStyle}" Grid.Column="0" Grid.ColumnSpan="2" x:Name="year"  HorizontalOptions="Center" IsVisible="{Binding CalendarSectionShown}">
                         <Label.FormattedText>
                             <FormattedString>
                                 <Span Text="{Binding MonthText}"/>
@@ -81,12 +80,11 @@
                     </Label>
 
                     <controls:Calendar 
-                        x:Name="Calendar1"
-                        Grid.Row="2"  
+                        x:Name="Calendar"
+                        Grid.Row="1"  
                         Grid.Column="0" 
                         Grid.ColumnSpan="2"
                         Events="{Binding Events}"
-                        DayTappedCommand="{Binding DayTappedCommand}"
                         MonthYear="{Binding CurrentMonthYear}"
                         Style="{StaticResource CalendarStyle}"
                         ShowMonthPicker="False"
