--- a/src/SyncMe/SyncMe.Lib/Views/CalendarPage.xaml
+++ b/src/SyncMe/SyncMe.Lib/Views/CalendarPage.xaml
@@ -56,30 +56,33 @@
         </ResourceDictionary>
     </ContentPage.Resources>
 
+    <ContentPage.ToolbarItems>
+        <ToolbarItem IconImageSource="{markup:ImageExtension SharedSource=icon_add_event.png}" Clicked="AddEvent_Clicked"></ToolbarItem>
+    </ContentPage.ToolbarItems>
+
     <ContentPage.Content>
-        <AbsoluteLayout>
-            <StackLayout>
-                <Grid>
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="5*" />
-                        <ColumnDefinition Width="5*"/>
-                    </Grid.ColumnDefinitions>
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="*"/>
-                        <RowDefinition Height="20*"/>
-                    </Grid.RowDefinitions>
+        <StackLayout>
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="5*" />
+                    <ColumnDefinition Width="5*"/>
+                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="*"/>
+                    <RowDefinition Height="20*"/>
+                </Grid.RowDefinitions>
 
-                    <Label Grid.Row="0" FontSize="Medium" Style="{StaticResource YearMonthStyle}" Grid.Column="0" Grid.ColumnSpan="2" x:Name="year"  HorizontalOptions="Center" IsVisible="{Binding CalendarSectionShown}">
-                        <Label.FormattedText>
-                            <FormattedString>
-                                <Span Text="{Binding MonthText}"/>
-                                <Span Text=" "/>
-                                <Span Text="{Binding Year}"/>
-                            </FormattedString>
-                        </Label.FormattedText>
-                    </Label>
+                <Label Grid.Row="0" FontSize="Medium" Style="{StaticResource YearMonthStyle}" Grid.Column="0" Grid.ColumnSpan="2" x:Name="year"  HorizontalOptions="Center" IsVisible="{Binding CalendarSectionShown}">
+                    <Label.FormattedText>
+                        <FormattedString>
+                            <Span Text="{Binding MonthText}"/>
+                            <Span Text=" "/>
+                            <Span Text="{Binding Year}"/>
+                        </FormattedString>
+                    </Label.FormattedText>
+                </Label>
 
-                    <controls:Calendar 
+                <controls:Calendar 
                         x:Name="Calendar"
                         Grid.Row="1"  
                         Grid.Column="0" 
@@ -90,37 +93,29 @@
                         ShowMonthPicker="False"
                         ShowYearPicker="False"
                         HorizontalOptions="Center">
-                        <controls:Calendar.EventTemplate>
-                            <DataTemplate>
-                                <Frame Style="{StaticResource FrameStyle}">
-                                    <SwipeView BackgroundColor="White">
-                                        <SwipeView.RightItems>
-                                            <SwipeItem
+                    <controls:Calendar.EventTemplate>
+                        <DataTemplate>
+                            <Frame Style="{StaticResource FrameStyle}">
+                                <SwipeView BackgroundColor="White">
+                                    <SwipeView.RightItems>
+                                        <SwipeItem
                                                 IconImageSource="{markup:ImageExtension SharedSource=icon_trash.png}"
                                                 IsVisible="{Binding IsDeleteButtonVisible}"
                                                 Clicked="OnRemoveClicked" 
                                                 BackgroundColor="LightPink"
                                                 CommandParameter="{Binding .}" />
-                                        </SwipeView.RightItems>
-                                        <StackLayout Padding="15,0,0,0">
-                                            <Label Text="{Binding StartTimeString}" Style="{StaticResource TimeStyle}"/>
-                                            <Label Text="{Binding Name}" Style="{StaticResource TitleStyle}"/>
-                                            <Label Text="{Binding Description}" Style="{StaticResource DescriptionStyle}"/>
-                                        </StackLayout>
-                                    </SwipeView>
-                                </Frame>
-                            </DataTemplate>
-                        </controls:Calendar.EventTemplate>
-                    </controls:Calendar>
-                </Grid>
-            </StackLayout>
-            <Button
-                x:Name="AddEvent"
-                ImageSource="icon_add_calendar.png"
-                BackgroundColor="Transparent"
-                Style="{StaticResource FloadButtonStyle}"
-                AbsoluteLayout.LayoutBounds="0.93, 0.94, 50, 50"
-                AbsoluteLayout.LayoutFlags="PositionProportional" />
-        </AbsoluteLayout>
+                                    </SwipeView.RightItems>
+                                    <StackLayout Padding="15,0,0,0">
+                                        <Label Text="{Binding StartTimeString}" Style="{StaticResource TimeStyle}"/>
+                                        <Label Text="{Binding Name}" Style="{StaticResource TitleStyle}"/>
+                                        <Label Text="{Binding Description}" Style="{StaticResource DescriptionStyle}"/>
+                                    </StackLayout>
+                                </SwipeView>
+                            </Frame>
+                        </DataTemplate>
+                    </controls:Calendar.EventTemplate>
+                </controls:Calendar>
+            </Grid>
+        </StackLayout>
     </ContentPage.Content>
 </ContentPage>
