--- a/src/SyncMe/SyncMe.Lib/App.xaml
+++ b/src/SyncMe/SyncMe.Lib/App.xaml
@@ -5,7 +5,12 @@
     <Application.Resources>
         <ResourceDictionary>
             <Color x:Key="epamBlue">#39c2d7</Color>
-            <Color x:Key="epamGrey">#464547</Color>
+            <Color x:Key="epamGrey">#424242</Color>
+            
+            <Color x:Key="syncBlue">#39c2d7</Color>
+            <Color x:Key="syncWhite">#FFFFFF</Color>
+            <Color x:Key="syncGrey">#757575</Color>
+            <Color x:Key="syncBlack">#000000</Color>
         </ResourceDictionary>
         <Style x:Key="ToggleButtonStyle" TargetType="Switch">
             <Setter Property="OnColor" Value="{StaticResource epamBlue}"/>
